Update TODO.md with corrected session history and new sprint blocks
Reorganized session history with correct dates and consolidated multi-session days. Created 7 new blocks for Jan 5-11 sprint focusing on error handling and comments integration.

--- a/demo/src/main/resources/application-prod.properties
+++ b/demo/src/main/resources/application-prod.properties
@@ -1,9 +1,15 @@
 spring.application.name=Report Generator
 
-# Database
-spring.datasource.url=jdbc:h2:file:./data/reportdb
-spring.datasource.driverClassName=org.h2.Driver
+# PostgreSQL Database Configuration for Railway
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.show-sql=false
 
-
+# Disable H2 console in production
+spring.h2.console.enabled=false
