Session Jan 8: Fix Railway deployment, complete Blocks 1-4
- Debugged production database connection (Railway service isolation)
- Fixed URL parsing for double equals in query params (Block 1)
- Implemented DOM rendering for bullet points (Block 2)
- Added Spring Boot Actuator for performance monitoring (Block 4)
- Block 3 layout changes need review

Next: Refine Block 3 and test end-to-end

--- a/demo/src/main/resources/application-prod.properties
+++ b/demo/src/main/resources/application-prod.properties
@@ -13,3 +13,10 @@ spring.jpa.show-sql=false
 
 # Disable H2 console in production
 spring.h2.console.enabled=false
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.show-details=always
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+management.metrics.enable.system=true
