--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -81,6 +81,16 @@
             <artifactId>openai-java</artifactId>
             <version>4.13.0</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
