Complete YouTube Comments Integration Sprint (Blocks 1-4)
Backend changes:
- Remove Transcript entity/repository (YAGNI principle)
- Restructure Report: split summary into contentSummary + communityReaction
- Create AnalysisResult DTO for structured LLM responses
- Update LlmService to accept separate transcript and comments parameters
- Improve prompts to capture sentiment/tone with personality
- Fix comment extraction using Stream.concat() for top-level + replies

Frontend changes:
- Implement grid layout with community sidebar
- Add "Video Analysis" and "Community Reaction" section headers
- Update JavaScript to parse contentSummary and communityReaction separately
- Add responsive design for mobile (sidebar stacks below)

H2 Console fix:
- Configure H2 console for Spring Boot 4.0 using JakartaWebServlet
- Use ServletContextInitializer for manual servlet registration
- Resolve Jakarta EE vs javax.servlet compatibility issue

--- a/demo/src/main/resources/application-local.properties
+++ b/demo/src/main/resources/application-local.properties
@@ -9,10 +9,10 @@ spring.datasource.url=jdbc:h2:file:./data/reportdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoints.web.exposure.include=health,metrics,prometheus,h2
 management.endpoint.health.show-details=always
 management.metrics.enable.jvm=true
 management.metrics.enable.process=true
